@@ -50,9 +50,9 @@
    (:file "find-system" :depends-on ("system" "cache"))
    (:file "find-component" :depends-on ("find-system"))
    (:file "operation" :depends-on ("upgrade"))
-   (:file "action" :depends-on ("find-component" "operation" "cache"))
+   (:file "action" :depends-on ("find-component" "operation"))
    (:file "lisp-action" :depends-on ("action"))
-   (:file "plan" :depends-on ("lisp-action" "cache"))
+   (:file "plan" :depends-on ("lisp-action"))
    (:file "operate" :depends-on ("plan"))
    (:file "output-translations" :depends-on ("operate"))
    (:file "source-registry" :depends-on ("find-system"))
