@@ -1,4 +1,0 @@
-;;; -*- Lisp -*-
-(asdf:defsystem test-force
-  :components
-  ((:file "file1")))
