@@ -9,6 +9,9 @@ cl-asdf (2:3.1.1-1) unstable; urgency=low
     subclasses of OPERATION implicitly propagate DOWNWARD and SIDEWAY.
     Failure to explicitly inherit from own of the explicitly propagating
     or non-propagating classes will result in a WARNING for now.
+  * force-not now takes precedence over force, and systems named in the
+    set (represented as an equal hash-table) *immutable-systems* are always
+    forced-not, and even their .asd is not refreshed from the filesystem.
   * portability is much improved, with support for the latest GCL, and
     fixes for ABCL, CLISP, ECL, LispWorks, SBCL, XCL, etc.
   * bundle support was refactored; ECL support is fixed;
